--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,10 @@
   <title>Index</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="icon" type="image/png" href="assets/images/title-icon.png">
 </head>
 
 <body>
@@ -110,7 +111,7 @@
 
 
   </div>
-
+  <!--Footer with centered text, fixed bottom, secondary background, white text-->
   <div class="card-footer text-muted text-center">
     <p>
       Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> in Baltimore.
