--- a/index.html
+++ b/index.html
@@ -51,19 +51,20 @@
           <!--The image has css styling in the style.css file-->
           <img id="portrait" class="float-left mr-2 mb-2" src="./assets/img/mn_portrait.jpg" alt="Card image cap" />
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            tincidunt sem quis tortor pharetra, pulvinar tempus diam
-            malesuada. Suspendisse potenti. Sed a mi id turpis rhoncus tempor
-            et ac erat. Aenean non euismod ex.
+            Front-end web developer leveraging design and writing background to build a more intuitive user experience
+            on the web. Certified in full stack development from the University of Johns Hopkins, with experience in
+            JavaScript, CSS, HTML, JQUERY and responsive web design. Citizen coder who designed automations in
+            Javascript and Python for Adobe stack for Stanley Black and Decker that saved the company forty weeks of
+            manual data entry a year. My automated layout system merited an Eagle Award for SBD employee of the year. To
+            build the system, I taught myself Javascript and Python on weekends. I applied agile design to develop the
+            system. I improve efficiency. I have fifteen years of supervisor experience. I am a committed lifelong
+            learner who is willing to educate myself through any available means. Experienced in meeting and beating
+            deadlines.
           </p>
-          <p>
-            Integer non ultrices ligula. Morbi est nibh, scelerisque et massa
-            a, consequat porttitor magna. Cras sollicitudin, augue quis varius
-            cursus, lacus eros vehicula nulla, at mollis leo ipsum et turpis.
-            In a varius orci, ut hendrerit lorem. Aliquam id vestibulum purus,
-            eu cursus felis. Phasellus in nunc aliquam, faucibus turpis eu,
-            tempor enim. Donec fermentum leo eget gravida ultrices.
-          </p>
+          <ul>
+            <li><a class="nav-link" href="https://www.linkedin.com/in/james-w-54270740/"><i class="fab fa-linkedin"></i>
+               Linked In |</a></li>
+          </ul>
         </section>
       </article>
     </section>
