Added github link to repos

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
           </p>
           <ul>
             <li><a class="nav-link" href="https://www.linkedin.com/in/james-w-54270740/"><i class="fab fa-linkedin"></i>
-               Linked In |</a></li>
+                Linked In |</a></li>
+            <li><a class="nav-link" href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
+                Github |</a></li>
           </ul>
         </section>
       </article>
