--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="icon" type="image/png" href="assets/images/title-icon.png">
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
@@ -62,10 +62,10 @@
             deadlines.
           </p>
           <ul>
-            <li><a class="nav-link" href="https://www.linkedin.com/in/james-w-54270740/"><i class="fab fa-linkedin"></i>
-                Linked In |</a></li>
-            <li><a class="nav-link" href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
-                Github |</a></li>
+            <li><a href="https://www.linkedin.com/in/james-w-54270740/"><i class="fab fa-linkedin"></i>
+                Linked In</a></li>
+            <li><a href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
+                Github</a></li>
           </ul>
         </section>
       </article>
