--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="icon" type="image/png" href="assets/images/title-icon.png">
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
@@ -37,14 +37,27 @@
   </nav>
   <!-- Portfolio container -->
   <div class="parent-container d-flex mt-3">
-
     <div class="container col-9">
       <div class="container">
+
+        <div class="row">
+          <p>
+            <h2>Portfolio</h2>
+          </p>
+          <p>
+          <ul>
+            <li><a href="https://www.linkedin.com/in/james-w-54270740/"><i class="fab fa-linkedin"></i>
+                Linked In</a></li>
+            <li><a href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
+                Github</a></li>
+          </ul>
+          </p>
+        </div>
         <div class="row">
 
           <div class="card col-sm" style="width: 18rem;">
             <div class="card-body">
-              <h5 class="card-title" id="box">Pour Decision
+              <h5 class="card-title text-info" id="box">Pour Decision
               </h5>
               <hr class="my-4">
               <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank" class="btn btn-primary">Repo</a>
@@ -106,9 +119,6 @@
         </div>
       </div>
     </div>
-
-
-
 
   </div>
   <!--Footer with centered text, fixed bottom, secondary background, white text-->
