--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link class = "favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
