--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link class = "favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
 
           <div class="card col-sm" style="width: 18rem;">
             <div class="card-body">
-              <h5 class="card-title text-info" id="box">Pour Decision
+              <h5 class="card-title" id="box">Pour Decision
               </h5>
               <hr class="my-4">
               <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank" class="btn btn-primary">Repo</a>
