--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,8 @@
               <h5 class="card-title" id="box">Pour Decision
               </h5>
               <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank" class="btn btn-primary">Repo</a>
-              <a href="https://jrtwheeler.github.io/Pour-Decision/" target="_blank" class="btn btn-primary">Site</a>
+              <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank" class="btn btn-primary"><i class="fab fa-github"></i></a>
+              <a href="https://jrtwheeler.github.io/Pour-Decision/" target="_blank" class="btn btn-primary"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -74,8 +74,8 @@
               <h5 class="card-title" id="box">Weather Dashboard
               </h5>
               <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank" class="btn btn-primary">Repo</a>
-              <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank" class="btn btn-primary">Site</a>
+              <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank" class="btn btn-primary"><i class="fab fa-github"></i></a>
+              <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank" class="btn btn-primary"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -88,9 +88,9 @@
               </h5>
               <hr class="my-4">
               <a href="https://github.com/jrtwheeler/Password-Generator" target="_blank"
-                class="btn btn-primary">Repo</a>
+                class="btn btn-primary"><i class="fab fa-github"></i></a>
               <a href="https://jrtwheeler.github.io/Password-Generator/" target="_blank"
-                class="btn btn-primary">Site</a>
+                class="btn btn-primary"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -99,8 +99,8 @@
               <h5 class="card-title" id="box">NYT Archive Search
               </h5>
               <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary">Repo</a>
-              <a href="https://jrtwheeler.github.io/NYTSearch/" target="_blank" class="btn btn-primary">Site</a>
+              <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary"><i class="fab fa-github"></i></a>
+              <a href="https://jrtwheeler.github.io/NYTSearch/" target="_blank" class="btn btn-primary"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -110,9 +110,9 @@
               </h5>
               <hr class="my-4">
               <a href="https://github.com/jrtwheeler/Work-Day-Scheduler" target="_blank"
-                class="btn btn-primary">Repo</a>
+                class="btn btn-primary"><i class="fab fa-github"></i></a>
               <a href="https://jrtwheeler.github.io/Work-Day-Scheduler/" target="_blank"
-                class="btn btn-primary">Site</a>
+                class="btn btn-primary"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
