Added tooltips for web nav buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,8 @@
               <h5 class="card-title" id="box">Pour Decision
               </h5>
               <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank" class="btn btn-primary"><i class="fab fa-github"></i></a>
-              <a href="https://jrtwheeler.github.io/Pour-Decision/" target="_blank" class="btn btn-primary"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank" class="btn btn-primary button-github" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
+              <a href="https://jrtwheeler.github.io/Pour-Decision/" target="_blank" class="btn btn-primary button-webpage" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -74,8 +74,8 @@
               <h5 class="card-title" id="box">Weather Dashboard
               </h5>
               <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank" class="btn btn-primary"><i class="fab fa-github"></i></a>
-              <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank" class="btn btn-primary"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
+              <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -88,9 +88,9 @@
               </h5>
               <hr class="my-4">
               <a href="https://github.com/jrtwheeler/Password-Generator" target="_blank"
-                class="btn btn-primary"><i class="fab fa-github"></i></a>
+                class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
               <a href="https://jrtwheeler.github.io/Password-Generator/" target="_blank"
-                class="btn btn-primary"><i class="fas fa-globe"></i></a>
+                class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -99,8 +99,8 @@
               <h5 class="card-title" id="box">NYT Archive Search
               </h5>
               <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary"><i class="fab fa-github"></i></a>
-              <a href="https://jrtwheeler.github.io/NYTSearch/" target="_blank" class="btn btn-primary"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
+              <a href="https://jrtwheeler.github.io/NYTSearch/" target="_blank" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -110,9 +110,9 @@
               </h5>
               <hr class="my-4">
               <a href="https://github.com/jrtwheeler/Work-Day-Scheduler" target="_blank"
-                class="btn btn-primary"><i class="fab fa-github"></i></a>
+                class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
               <a href="https://jrtwheeler.github.io/Work-Day-Scheduler/" target="_blank"
-                class="btn btn-primary"><i class="fas fa-globe"></i></a>
+                class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -138,6 +138,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
+    <script src="assets/javascript/script.js"></script>
 </body>
 
 </html>
