--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link class = "favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link class="favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
 
         <div class="row">
           <p>
-            <h2>Portfolio</h2>
+          <h2>Portfolio</h2>
           </p>
           <p>
           <ul>
@@ -55,31 +55,63 @@
         </div>
         <div class="row">
 
-          <div class="card col-sm" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title" id="box">Pour Decision
-              </h5>
-              <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank" class="btn btn-primary button-github" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
-              <a href="https://jrtwheeler.github.io/Pour-Decision/" target="_blank" class="btn btn-primary button-webpage" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
+          <div class="accordion" id="accordionExample">
+            <div class="card">
+              <div class="card-title" id="headingOne">
+                <h5 class="mb-0">
+                  <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
+                    data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    Pour Decision
+                  </button>
+                </h5>
+                <div class="card-body">
+                  <hr class="my-4">
+                  <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank"
+                    class="btn btn-primary button-github" data-toggle="tooltip" data-placement="top"
+                    title="Open Github Repository"><i class="fab fa-github"></i></a>
+                  <a href="https://jrtwheeler.github.io/Pour-Decision/" target="_blank"
+                    class="btn btn-primary button-webpage" data-toggle="tooltip" data-placement="top"
+                    title="Open Webpage"><i class="fas fa-globe"></i></a>
+                </div>
+              </div>
+
+              <div id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                  <img src="assets/img/pour-decisions.png" class="card-img-top" alt="..."> </div>
+              </div>
             </div>
+
+          </div>
+
+          <div class="accordion" id="accordionExample">
+            <div class="card">
+              <div class="card-title" id="headingOne">
+                <h5 class="mb-0">
+                  <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
+                    data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    Weather Dashboard
+                  </button>
+                </h5>
+                <div class="card-body">
+                  <hr class="my-4">
+                  <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank" class="btn btn-primary"
+                    data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i
+                      class="fab fa-github"></i></a>
+                  <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank" class="btn btn-primary"
+                    data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
+                </div>
+              </div>
+
+              <div id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                  <img src="assets/img/weather-dashboard.png" class="card-img-top" alt="..."> </div>
+              </div>
+            </div>
+
           </div>
 
         </div>
 
-        <div class="row">
-
-          <div class="card col-sm" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title" id="box">Weather Dashboard
-              </h5>
-              <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
-              <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-
-        </div>
         <div class="row">
 
           <div class="card col-sm" style="width: 18rem;">
@@ -87,10 +119,11 @@
               <h5 class="card-title" id="box">Password Generator
               </h5>
               <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/Password-Generator" target="_blank"
-                class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
-              <a href="https://jrtwheeler.github.io/Password-Generator/" target="_blank"
-                class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/jrtwheeler/Password-Generator" target="_blank" class="btn btn-primary"
+                data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i
+                  class="fab fa-github"></i></a>
+              <a href="https://jrtwheeler.github.io/Password-Generator/" target="_blank" class="btn btn-primary"
+                data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -99,8 +132,11 @@
               <h5 class="card-title" id="box">NYT Archive Search
               </h5>
               <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
-              <a href="https://jrtwheeler.github.io/NYTSearch/" target="_blank" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary"
+                data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i
+                  class="fab fa-github"></i></a>
+              <a href="https://jrtwheeler.github.io/NYTSearch/" target="_blank" class="btn btn-primary"
+                data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -109,10 +145,11 @@
               <h5 class="card-title" id="box">Work Day Scheduler
               </h5>
               <hr class="my-4">
-              <a href="https://github.com/jrtwheeler/Work-Day-Scheduler" target="_blank"
-                class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i class="fab fa-github"></i></a>
-              <a href="https://jrtwheeler.github.io/Work-Day-Scheduler/" target="_blank"
-                class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/jrtwheeler/Work-Day-Scheduler" target="_blank" class="btn btn-primary"
+                data-toggle="tooltip" data-placement="top" title="Open Github Repository"><i
+                  class="fab fa-github"></i></a>
+              <a href="https://jrtwheeler.github.io/Work-Day-Scheduler/" target="_blank" class="btn btn-primary"
+                data-toggle="tooltip" data-placement="top" title="Open Webpage"><i class="fas fa-globe"></i></a>
             </div>
           </div>
 
@@ -138,7 +175,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
-    <script src="assets/javascript/script.js"></script>
+  <script src="assets/javascript/script.js"></script>
 </body>
 
 </html>
