Added accordian boxes to Portolfio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,12 +55,12 @@
         </div>
         <div class="row">
 
-          <div class="accordion" id="accordionExample">
+          <div class="accordion" id="accordionPour">
             <div class="card">
               <div class="card-title" id="headingOne">
                 <h5 class="mb-0">
                   <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
-                    data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     Pour Decision
                   </button>
                 </h5>
@@ -75,7 +75,7 @@
                 </div>
               </div>
 
-              <div id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionPour">
                 <div class="card-body">
                   <img src="assets/img/pour-decisions.png" class="card-img-top" alt="..."> </div>
               </div>
@@ -83,12 +83,12 @@
 
           </div>
 
-          <div class="accordion" id="accordionExample">
+          <div class="accordion" id="accordionWeather">
             <div class="card">
               <div class="card-title" id="headingOne">
                 <h5 class="mb-0">
                   <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
-                    data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne">
                     Weather Dashboard
                   </button>
                 </h5>
@@ -102,7 +102,7 @@
                 </div>
               </div>
 
-              <div id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div id="collapseTwo" aria-labelledby="headingOne" data-parent="#accordionWeather">
                 <div class="card-body">
                   <img src="assets/img/weather-dashboard.png" class="card-img-top" alt="..."> </div>
               </div>
