--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link class = "favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link class="favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
   <!-- Nav bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand ml-3 bg-info text-white font-weight-bold" href="./index.html">Jim Wheeler</a><button
-      class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+  <!-- Nav bar -->
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand text-white font-weight-bold" href="./index.html">Jim Wheeler</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <nav class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
-      <!--The navbar links are an unordered list, right justified-ml-auto-->
       <ul class="navbar-nav ml-auto">
-        <!--The first list item is 'active' so it is darker than the other list items becaue it is the active page.-->
-        <li class="nav-item active bg-gradient-primary">
-          <a class="nav-link" href="./index.html">About |</a>
+        <li class="nav-item">
+          <a class="nav-link active" href="./index.html">About |</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./portfolio.html">Portfolio |<span class="sr-only">(current)</span></a>
@@ -61,6 +60,7 @@
             learner who is willing to educate myself through any available means. Experienced in meeting and beating
             deadlines.
           </p>
+          <br>
           <ul>
             <li><a href="https://www.linkedin.com/in/james-w-54270740/"><i class="fab fa-linkedin"></i>
                 Linked In</a></li>
