--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link class = "favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link class="favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
   <!-- Nav bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand ml-3 bg-info text-white font-weight-bold" href="./index.html">Jim Wheeler</a><button
-      class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand text-white font-weight-bold" href="./index.html">Jim Wheeler</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
