Revised color scheme

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Nav bar -->
   <!-- Nav bar -->
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand text-white font-weight-bold" href="./index.html">Jim Wheeler</a>
+    <a class="navbar-brand text-white font-weight-bold" href="./index.html">James Wheeler</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
     <!--Card row-->
     <section class="row">
       <!--Card column content is centerered and margin for y-axis is 5. Column is full 12 rows on small screens and larger-->
-      <article class="card col-sm-12 my-5">
+      <article class="card portrait-info col-sm-12 my-5">
         <!--Card header has info(teal) colored text and bold font-->
         <h1 class="card-header text-info font-weight-bold">About Me</h1>
         <!--Margin for the y axis of the section is 3, 2 for the x axis.-->
@@ -60,12 +60,14 @@
             learner who is willing to educate myself through any available means. Experienced in meeting and beating
             deadlines.
           </p>
-          <br>
-          <ul>
-            <li><a href="https://www.linkedin.com/in/james-w-54270740/"><i class="fab fa-linkedin"></i>
+          <ul class="list-group">
+            <li class="list-group-item col-3"><a href="https://www.linkedin.com/in/james-w-54270740/"><i
+                  class="fab fa-linkedin"></i>
                 Linked In</a></li>
-            <li><a href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
+            <li class="list-group-item col-3"><a href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
                 Github</a></li>
+            <li class="list-group-item col-3"><a href="https://github.com/jrtwheeler"><i class="fas fa-envelope-square"></i>
+                wheelewell@yahoo.com</a></li>
           </ul>
         </section>
       </article>
