--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
   <!-- Nav bar -->
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand text-white font-weight-bold" href="./index.html">Jim Wheeler</a>
+    <a class="navbar-brand text-white font-weight-bold" href="./index.html">James Wheeler</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
         <div class="card-body">
           <p>
             The weather dashboard makes three API calls to open weather to return the daily and five day
-            forecast for a city the user inputs..
+            forecast for a city the user inputs.
           </p>
           <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
           <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank"
