Added detail to the portfolio page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!--Card column content is centerered and margin for y-axis is 5. Column is full 12 rows on small screens and larger-->
       <article class="card portrait-info col-sm-12 my-5">
         <!--Card header has info(teal) colored text and bold font-->
-        <h1 class="card-header text-info font-weight-bold">About Me</h1>
+        <h1 class="card-header text-white font-weight-bold">About Me</h1>
         <!--Margin for the y axis of the section is 3, 2 for the x axis.-->
         <section class="my-3 mx-2">
           <!--The image has css styling in the style.css file-->
@@ -61,12 +61,12 @@
             deadlines.
           </p>
           <ul class="list-group">
-            <li class="list-group-item col-3"><a href="https://www.linkedin.com/in/james-w-54270740/"><i
+            <li class="list-group-item"><a href="https://www.linkedin.com/in/james-w-54270740/"><i
                   class="fab fa-linkedin"></i>
                 Linked In</a></li>
-            <li class="list-group-item col-3"><a href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
+            <li class="list-group-item"><a href="https://github.com/jrtwheeler"><i class="fab fa-github"></i>
                 Github</a></li>
-            <li class="list-group-item col-3"><a href="https://github.com/jrtwheeler"><i class="fas fa-envelope-square"></i>
+            <li class="list-group-item"><a href="https://github.com/jrtwheeler"><i class="fas fa-envelope-square"></i>
                 wheelewell@yahoo.com</a></li>
           </ul>
         </section>
