--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
         <div class="card-body">
           <p>
             The weather dashboard makes three API calls to open weather to return the daily and five day
-            forecast for a city the user inputs.
+            forecast for a city the user inputs. The user inputs are saved to local storage as user history. The user history becomes buttons that can activate the API call for the weather forecast.
           </p>
           <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
           <a href="https://github.com/jrtwheeler/Pour-Decision" target="_blank"
@@ -91,10 +91,10 @@
             alt="...">
           <!-- This is a bootstrap list group -->
           <ul class="list-group">
-            <li class="list-group-item"><i class="fas fa-code"></i></li>
-            <li class="list-group-item"><i class="fab fa-js-square"></i></li>
-            <li class="list-group-item"><i class="fab fa-html5"></i></li>
-            <li class="list-group-item"><i class="fab fa-css3-alt"></i></li>
+            <li class="list-group-item"><i class="fas fa-code"></i> Coding Language</li>
+            <li class="list-group-item"><i class="fab fa-js-square"> Javascript</i></li>
+            <li class="list-group-item"><i class="fab fa-html5"></i> HTML5</li>
+            <li class="list-group-item"><i class="fab fa-css3-alt"></i> CSS</li>
           </ul>
         </div>
       </div>
@@ -112,7 +112,7 @@
         <div class="card-body">
           <p>
             The food app lets the user choose a random meal and a random drink from
-            https://www.themealdb.com/api and https://www.thecocktaildb.com/api.
+            https://www.themealdb.com/api and https://www.thecocktaildb.com/api. If the user likes the food or drink, they can store the search. The food and drink divs have dropdowns to show the ingrediants and recipe.
           </p>
           <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
           <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank"
@@ -126,10 +126,10 @@
             alt="...">
           <!-- This is a bootstrap list group -->
           <ul class="list-group">
-            <li class="list-group-item"><i class="fas fa-code"></i></li>
-            <li class="list-group-item"><i class="fab fa-js-square"></i></li>
-            <li class="list-group-item"><i class="fab fa-html5"></i></li>
-            <li class="list-group-item"><i class="fab fa-css3-alt"></i></li>
+            <li class="list-group-item"><i class="fas fa-code"></i> Coding Language</li>
+            <li class="list-group-item"><i class="fab fa-js-square"> Javascript</i></li>
+            <li class="list-group-item"><i class="fab fa-html5"></i> HTML5</li>
+            <li class="list-group-item"><i class="fab fa-css3-alt"></i> CSS</li>
           </ul>
         </div>
       </div>
@@ -147,7 +147,7 @@
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionP">
       <div class="card-body">
         <p>
-          The New York Times Search uses a third party API call to search the NYT archives.
+          The New York Times Search uses a third party API call to search the NYT archives. The suer can input a range of years, subject, and the number of articles.
         </p>
         <!-- These are the buttons with data-toggle tooltip added to add the tooltips to each -->
         <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank" class="btn btn-primary button-github mb-2"
@@ -158,10 +158,10 @@
         <img id="portrait" class="float-left mr-2 mb-2" src="assets/img/nyt-archive.png" class="card-img-top" alt="...">
         <!-- This is a bootstrap list group -->
         <ul class="list-group">
-          <li class="list-group-item"><i class="fas fa-code"></i></li>
-          <li class="list-group-item"><i class="fab fa-js-square"></i></li>
-          <li class="list-group-item"><i class="fab fa-html5"></i></li>
-          <li class="list-group-item"><i class="fab fa-css3-alt"></i></li>
+          <li class="list-group-item"><i class="fas fa-code"></i> Coding Language</li>
+          <li class="list-group-item"><i class="fab fa-js-square"> Javascript</i></li>
+          <li class="list-group-item"><i class="fab fa-html5"></i> HTML5</li>
+          <li class="list-group-item"><i class="fab fa-css3-alt"></i> CSS</li>
         </ul>
       </div>
     </div>
